<resources>
    <string name="app_name">NeWork</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="description_post_save">Save</string>
    <string name="description_post_like">Like</string>
    <string name="menu_remove">Remove</string>
    <string name="menu_edit">Edit</string>
    <string name="edit">Edit</string>
    <string name="enter_new_content">Enter new message</string>
    <string name="cancel">Cancel</string>
    <string name="ok">Ok</string>
    <string name="retry_loading">Repeat</string>
    <string name="empty_posts">There are no posts.\nIf you create a new post, it will appear here</string>
    <string name="error_loading">Failed to load data</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_out">Sign Out</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="enter_your_login">Enter User Name</string>
    <string name="enter_your_password">Enter password</string>
    <string name="error_auth">Username or password you entered is incorrect</string>
    <string name="name">Username</string>
    <string name="repeat_your_password">Repeat yout password</string>
    <string name="password_repeat">Repeat your password</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="account">Account</string>
    <string name="remove">Remove</string>
    <string name="description_photo">Photo</string>
    <string name="description_select_photo">Select Photo</string>
    <string name="description_take_photo">Take Photo</string>
    <string name="channel_remote_name">Server notifications</string>
    <string name="channel_remote_description">Notifications from remote server</string>
    <string name="google_play_unavailable">Google Api Unavailable</string>
    <string name="audio">Аудио</string>
    <string name="video">Видео</string>
    <string name="error_play">Mo media to play</string>
    <string-array name="eventType">
        <item>online</item>
        <item>offline</item>
    </string-array>
</resources>